# ai-no-uta

./: .gitignore  README.md  pyproject.toml
linearAlgebra/: 01_guassianQuadrature.excalidraw  README.md  config.example.yaml  summarize.py
linearAlgebra/animations/: column_and_null_spaces.py  column_and_null_spaces_steps.md  pyproject.toml  run.py
linearAlgebra/assets/: 15_column_and_null_spaces_steps.md  16_inverse_using_RREF.md  25_determinant_by_gauss.md
linearAlgebra/code/: determinantPermutation.py
linearAlgebra/notes/: part1.md  part2.md  part3.md
linearAlgebra/refs/Part 1 Linear Algebra： An In-Depth Introduction with a Focus on Applications/: 001-A Complete In-Depth Linear Algebra Course with Problems and Exercises.md  002-Preview： The Magic of Gaussian Quadrature - A Billion Times Better than the Next Best Thing.md  003-Linear Algebra 2a： J.S. Bach + M.L. King = Linear Algebra, or the Addition of Sounds.md  004-Linear Decomposition.md  005-Linear Algebra 2c： The Three Fundamental Examples of Vectors.md  006-Linear Algebra 2d： Addition of Geometric Vectors.md  007-Linear Algebra 2e： Confirming All the 'Tivities.md  008-Linear Algebra 2f： The Origin in the Plane and the Parallelogram Rule.md  009-Linear Algebra 2g： Subtraction of Geometric Vectors.md  010-Linear Algebra 2ga： Subtraction is Often Easier than Addition!.md  011-Linear Algebra 2h： What Else Works like Geometric Vectors？.md  012-Linear Algebra 2i： Polynomials Are Vectors, Too!.md  013-Linear Algebra 2ia： Is One Polynomial a Multiple of the Other？.md  014-Linear Algebra 2j： Elements of ℝⁿ as Vectors - So Boring, yet so Important!.md  015-Linear Algebra 2k： Linear Combinations - a New Term for an Old Concept.md  016-Linear Algebra 2k1： Examples of Linear Combinations.md  017-Linear Algebra 2L： The Zero Vector - Does Nothing, Yet so Important!.md  018-Linear Algebra 2m： Span the Man.md  019-Linear Algebra 2n： Spanning Sets.md  020-Linear Algebra 2o1： Linear Subspaces of the Plane.md  021-Linear Algebra 2o2： Straight Talk - a Linear Combination Exercise.md  022-Linear Algebra 2o3： Equation of a Straight Line - More Important than You'd Think!.md  023-Linear Algebra 2p： A Passionate Appeal - Treat All Objects on Their Own Terms!.md  (+121 more)
problemSolvingStrategies/: README.md
(+184 files in other folders)
