[tool.poetry]
name = "ai-no-uta"
version = "0.1.0"
description = "Learning AI"
authors = ["Sayan Naskar"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
